Add filter category filter to training layer and fix spelling
Adds a dynamic filter to the training layer that will be used in the next layer. This matches
the media notebook.

--- a/notebooks/Retail/02_Training_Layer.ipynb
+++ b/notebooks/Retail/02_Training_Layer.ipynb
@@ -10,13 +10,12 @@
     "\n",
     "1. [Introduction](#intro)\n",
     "1. [Create Domain Recommenders](#recommenders)\n",
-    "1. [Create solutions](#solutions)\n",
-    "1. [Evaluate solutions](#eval)\n",
-    "1. [Using evaluation metrics](#use)\n",
+    "1. [Create Solutions](#solutions)\n",
+    "1. [Evaluate Solutions](#eval)\n",
+    "1. [Using Evaluation Metrics](#use)\n",
     "1. [Deploy a Campaign](#deploy)\n",
-    "1. [Create Purchased Products Filter](#filter)\n",
-    "1. [Storing useful variables](#vars)\n",
-    "Create Purchased Products Filter<a class=\"anchor\" id=\"filter\"></a>\n",
+    "1. [Create Filters](#filters)\n",
+    "1. [Storing Useful Variables](#vars)\n",
     "\n",
     "## Introduction <a class=\"anchor\" id=\"intro\"></a>\n",
     "\n",
@@ -178,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create solutions <a class=\"anchor\" id=\"solutions\"></a>\n",
+    "## Create Solutions <a class=\"anchor\" id=\"solutions\"></a>\n",
     "[Back to top](#top)\n",
     "\n",
     "Some use cases require a custom implementation. \n",
@@ -485,7 +484,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Using evaluation metrics <a class=\"anchor\" id=\"use\"></a>\n",
+    "## Using Evaluation Metrics <a class=\"anchor\" id=\"use\"></a>\n",
     "[Back to top](#top)\n",
     "\n",
     "It is important to use evaluation metrics carefully. There are a number of factors to keep in mind.\n",
@@ -594,10 +593,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create Purchased Products Filter<a class=\"anchor\" id=\"filter\"></a>\n",
+    "## Create Filters <a class=\"anchor\" id=\"filters\"></a>\n",
     "[Back to top](#top)\n",
     "\n",
-    "Amazon Personalize supports the ability to create [filters](https://docs.aws.amazon.com/personalize/latest/dg/filter.html) that can be used to exclude items from being recommended that meet a filter expression. Since it's a poor user experience to recommend products that a user has already purchased, we will create a filter that excludes recently purchased products. We'll do this by creating a filter expression that excludes items that have an interaction with an event type of `Purchase` for the user. If you recall from the last notebook, the interactions dataset uses the `Purchase` event type to track purchased items."
+    "Amazon Personalize supports the ability to create [filters](https://docs.aws.amazon.com/personalize/latest/dg/filter.html) that can be used to exclude items from being recommended that meet a filter expression. \n",
+    "\n",
+    "Now that all campaigns are deployed and active amd the recommenders have been trained we can create filters. Filters can be created for fields of both Items and Events. Filters can also be created dynamically for `IN` and `=` operations. For range queries, you should use static filters. \n",
+    "Range queries use the following operations: `NOT IN`, `<`, `>`, `<=`, and `>=`.\n",
+    "\n",
+    "A few common use cases for static filters in ECOMMERCE are:\n",
+    "\n",
+    "Categorical filters based on Item Metadata (that are range based) - Often your item metadata will have information about the item. Filtering on these can provide recommendations within that data.\n",
+    "\n",
+    "User Demographic ranges - you may want to recommend content to specific age demographics, for this you can create a filter that is specific to a age range like over 18, over 18 AND under 30, etc).\n",
+    "\n",
+    "\n",
+    "### Create Purchased Products Filter\n",
+    "\n",
+    "Since it's a poor user experience to recommend products that a user has already purchased, we will create a filter that excludes recently purchased products. We'll do this by creating a filter expression that excludes items that have an interaction with an event type of `Purchase` for the user. If you recall from the last notebook, the interactions dataset uses the `Purchase` event type to track purchased items."
    ]
   },
   {
@@ -606,14 +619,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = personalize.create_filter(\n",
+    "create_purchase_filter_response = personalize.create_filter(\n",
     "    name = 'immersion-day-filter-purchased-products',\n",
     "    datasetGroupArn = dataset_group_arn,\n",
     "    filterExpression = 'EXCLUDE itemId WHERE INTERACTIONS.event_type in (\"Purchase\")'\n",
     ")\n",
     " \n",
-    "filter_arn = response['filterArn']\n",
-    "print(f'Filter ARN: {filter_arn}')"
+    "filter_purchase_arn = create_purchase_filter_response['filterArn']\n",
+    "print(f'Filter ARN: {filter_purchase_arn}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create Category Filter\n",
+    "\n",
+    "Since there are a lot of categories to filter on, we will create a dynamic filter using the dynamic variable $CATEGORY, this will allow us to pass in the variable at runtime rather than create a static filter for each category."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_category_filter_response = personalize.create_filter(name='Category',\n",
+    "    datasetGroupArn = dataset_group_arn,\n",
+    "    filterExpression = 'INCLUDE ItemID WHERE Items.CATEGORY_L1 IN ($CATEGORY)'\n",
+    "    )\n",
+    "\n",
+    "filter_category_arn = create_category_filter_response['filterArn']\n",
+    "print(f'Filter ARN: {filter_category_arn}')"
    ]
   },
   {
@@ -635,10 +672,24 @@
     "max_time = time.time() + 60*60 # 1 hours\n",
     "while time.time() < max_time:\n",
     "    describe_filter_response = personalize.describe_filter(\n",
-    "        filterArn = filter_arn\n",
+    "        filterArn = filter_purchase_arn\n",
     "    )\n",
     "    status = describe_filter_response[\"filter\"][\"status\"]\n",
-    "    print(\"Filter: {}\".format(status))\n",
+    "    print(\"Purchase filter: {}\".format(status))\n",
+    "    \n",
+    "    if status == \"ACTIVE\" or status == \"CREATE FAILED\":\n",
+    "        break\n",
+    "        \n",
+    "    time.sleep(15)\n",
+    "    \n",
+    "status = None\n",
+    "max_time = time.time() + 60*60 # 1 hours\n",
+    "while time.time() < max_time:\n",
+    "    describe_filter_response = personalize.describe_filter(\n",
+    "        filterArn = filter_category_arn\n",
+    "    )\n",
+    "    status = describe_filter_response[\"filter\"][\"status\"]\n",
+    "    print(\"Category Filter: {}\".format(status))\n",
     "    \n",
     "    if status == \"ACTIVE\" or status == \"CREATE FAILED\":\n",
     "        break\n",
@@ -669,7 +720,8 @@
     "%store rerank_solution_version_arn\n",
     "%store rerank_campaign_arn\n",
     "\n",
-    "%store filter_arn\n"
+    "%store filter_purchase_arn\n",
+    "%store filter_category_arn"
    ]
   },
   {
