Fix spelling mistakes

--- a/notebooks/Retail/01_Data_Layer.ipynb
+++ b/notebooks/Retail/01_Data_Layer.ipynb
@@ -10,15 +10,16 @@
     "\n",
     "1. [How to Use the Notebook](#usenotebook)\n",
     "1. [Introduction](#intro)\n",
-    "1. [Choose a dataset or data source](#source)\n",
+    "1. [Choose a Dataset or Data Source](#source)\n",
     "1. [Configure an S3 bucket and an IAM role](#bucket_role)\n",
     "1. [Create dataset group](#group_dataset)\n",
-    "1. [Create the Interactions schema](#interact_schema)\n",
-    "1. [Create the Items schema](#items_schema)\n",
-    "1. [Create the Users schema](#users_schema)\n",
-    "1. [Import the Interactions data](#import_interactions)\n",
-    "1. [Import the Items metadata](#import_items)\n",
-    "1. [Import the User metadata](#import_users)\n",
+    "1. [Create the Interactions Schema](#interact_schema)\n",
+    "1. [Create the Items Schema](#items_schema)\n",
+    "1. [Create the Users Schema](#users_schema)\n",
+    "1. [Import the Interactions Data](#import_interactions)\n",
+    "1. [Import the Items Metadata](#import_items)\n",
+    "1. [Import the User Metadata](#import_users)\n",
+    "1. [Storing Useful Variables](#vars)\n",
     "\n",
     "## How to Use the Notebook <a class=\"anchor\" id=\"usenotebook\"></a>\n",
     "\n",
@@ -44,7 +45,7 @@
     "\n",
     "You can create and manage Domain dataset groups and Custom dataset groups with the AWS console, the AWS Command Line Interface (AWS CLI), or programmatically with the AWS SDKs.\n",
     "\n",
-    "## Define your use case <a class=\"anchor\" id=\"usecase\"></a>\n",
+    "## Define your Use Case <a class=\"anchor\" id=\"usecase\"></a>\n",
     "[Back to top](#top)\n",
     "\n",
     "There are a few guidelines for scoping a problem suitable for Personalize. We recommend the values below as a starting point, although the [official limits](https://docs.aws.amazon.com/personalize/latest/dg/limits.html) lie a little lower.\n",
@@ -78,7 +79,7 @@
     "In this notebook we will be working on the Data Layer, Creatig a Dataset Group and importing the Datasets. \n",
     "\n",
     "\n",
-    "## Choose a dataset or data source <a class=\"anchor\" id=\"source\"></a>\n",
+    "## Choose a Dataset or Data Source <a class=\"anchor\" id=\"source\"></a>\n",
     "[Back to top](#top)\n",
     "\n",
     "Regardless of the use case, the algorithms all share a base of learning on user-item-interaction data which is defined by 3 core attributes:\n",
@@ -412,7 +413,8 @@
     "            },\n",
     "            \"Action\": [\n",
     "                \"s3:GetObject\",\n",
-    "                \"s3:ListBucket\"\n",
+    "                \"s3:ListBucket\",\n",
+    "                \"s3:PutObject\"\n",
     "            ],\n",
     "            \"Resource\": [\n",
     "                \"arn:aws:s3:::{}\".format(bucket_name),\n",
@@ -474,7 +476,7 @@
     "    \n",
     "attach_response = iam.attach_role_policy(\n",
     "    RoleName = role_name,\n",
-    "    PolicyArn = \"arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess\"\n",
+    "    PolicyArn = \"arn:aws:iam::aws:policy/AmazonS3FullAccess\"\n",
     ");\n",
     "\n",
     "role_arn = create_role_response[\"Role\"][\"Arn\"]\n",
@@ -937,7 +939,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import the interactions data <a class=\"anchor\" id=\"import_interactions\"></a>\n",
+    "## Import the Interactions Data <a class=\"anchor\" id=\"import_interactions\"></a>\n",
     "[Back to top](#top)\n",
     "\n",
     "Earlier you created the dataset group and dataset to house your information, so now you will execute an import job that will load the interactions data from the S3 bucket into the Amazon Personalize dataset. "
@@ -966,7 +968,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import the item metadata <a class=\"anchor\" id=\"import_items\"></a>\n",
+    "## Import the Item Metadata <a class=\"anchor\" id=\"import_items\"></a>\n",
     "[Back to top](#top)\n",
     "\n",
     "Earlier you created the dataset group and dataset to house your information, now you will execute an import job that will load the item data from the S3 bucket into the Amazon Personalize dataset. "
@@ -995,7 +997,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import the user metadata <a class=\"anchor\" id=\"import_users\"></a>\n",
+    "## Import the User Metadata <a class=\"anchor\" id=\"import_users\"></a>\n",
     "[Back to top](#top)\n",
     "\n",
     "Earlier you created the dataset group and dataset to house your information, now you will execute an import job that will load the user data from the S3 bucket into the Amazon Personalize dataset. "
@@ -1073,6 +1075,16 @@
    "metadata": {},
    "source": [
     "With all imports now complete you can  start training recommenders and solutions. Run the cell below before moving on to store a few values for usage in the next notebooks. After completing that cell open notebook `02_Training_Layer.ipynb` to continue."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Storing Useful Variables <a class=\"anchor\" id=\"vars\"></a>\n",
+    "[Back to top](#top)\n",
+    "\n",
+    "Before exiting this notebook, run the following cells to save the version ARNs for use in the next notebook."
    ]
   },
   {
