--- a/notebooks/Media/01_Data_Layer.ipynb
+++ b/notebooks/Media/01_Data_Layer.ipynb
@@ -825,7 +825,7 @@
    "source": [
     "iam = boto3.client(\"iam\")\n",
     "\n",
-    "role_name = account_id+\"-PersonalizeS3\"\n",
+    "role_name = account_id+\"-PersonalizeS3-Immersion-Day\"\n",
     "assume_role_policy_document = {\n",
     "    \"Version\": \"2012-10-17\",\n",
     "    \"Statement\": [\n",
