Update for readability and clarity
Update the recommender to show a clearer example using the Customers who viewed X also viewed recommender instead of the Frequently bought
together.
Remove the context from the re-ranking recipe
Fix typos

--- a/notebooks/Retail/02_Training_Layer.ipynb
+++ b/notebooks/Retail/02_Training_Layer.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "Create Video on Demand Domain Recommenders for the following use cases:\n",
     "\n",
-    "1. [Frequently Bought Together](https://docs.aws.amazon.com/personalize/latest/dg/ECOMMERCE-use-cases.html#frequently-bought-together-use-case): Get recommendations for items that customers frequently buy together along with an item that you specify.\n",
+    "1. [Customers who viewed X also viewed](https://docs.aws.amazon.com/personalize/latest/dg/ECOMMERCE-use-cases.html#customers-also-viewed-use-case): Get recommendations for items that customers also viewed based on an item that you specify. With this use case, Amazon Personalize automatically filters items the user purchased based on the userId that you specify and `Purchase` events.\n",
     "\n",
     "1. [Recommended For You](https://docs.aws.amazon.com/personalize/latest/dg/ECOMMERCE-use-cases.html#recommended-for-you-use-case): Get personalized recommendations for items based on a user that you specify. With this use case, Amazon Personalize automatically filters items the user purchased based on the userId that you specify and Purchase events. For better performance, include `Purchase` events along with the required `View` events.\n",
     "\n",
@@ -129,9 +129,9 @@
    "source": [
     "[More use cases per domain](https://docs.aws.amazon.com/personalize/latest/dg/domain-use-cases.html).\n",
     "\n",
-    "### Create a \"Frequently Bought Together\" Recommender\n",
+    "### Create a \"Customers who viewed X also viewed\" Recommender\n",
     "\n",
-    "We are going to create a recommender of the type \"Frequently Bought Together\". This type of recommender offers recommendations for frequently bought together items based on historical user purchases."
+    "We are going to create a recommender of the type \"Customers who viewed X also viewed\". This recommender gives recommendations for items that customers also viewed based on an item that you specify. With this use case, Amazon Personalize automatically filters items the user purchased based on the userId that you specify and `Purchase` events."
    ]
   },
   {
@@ -141,11 +141,11 @@
    "outputs": [],
    "source": [
     "create_recommender_response = personalize.create_recommender(\n",
-    "  name = 'frequently_bought_together_demo',\n",
-    "  recipeArn = 'arn:aws:personalize:::recipe/aws-ecomm-frequently-bought-together',\n",
+    "  name = 'viewed_x_also_viewed_immersion_day',\n",
+    "  recipeArn = 'arn:aws:personalize:::recipe/aws-ecomm-customers-who-viewed-x-also-viewed',\n",
     "  datasetGroupArn = dataset_group_arn\n",
     ")\n",
-    "frequently_bought_together_arn = create_recommender_response[\"recommenderArn\"]\n",
+    "viewed_x_also_viewed_arn = create_recommender_response[\"recommenderArn\"]\n",
     "print (json.dumps(create_recommender_response))"
    ]
   },
@@ -165,7 +165,7 @@
    "outputs": [],
    "source": [
     "create_recommender_response = personalize.create_recommender(\n",
-    "  name = 'recommended_for_you_demo',\n",
+    "  name = 'recommended_for_you_immersion_day',\n",
     "  recipeArn = 'arn:aws:personalize:::recipe/aws-ecomm-recommended-for-you',\n",
     "  datasetGroupArn = dataset_group_arn\n",
     ")\n",
@@ -245,7 +245,7 @@
    "outputs": [],
    "source": [
     "rerank_create_solution_response = personalize.create_solution(\n",
-    "    name = \"personalize-poc-retail-rerank\",\n",
+    "    name = \"personalize_retail_rerank_immersion_day\",\n",
     "    datasetGroupArn = dataset_group_arn,\n",
     "    recipeArn = rerank_recipe_arn\n",
     ")\n",
@@ -313,25 +313,25 @@
     "max_time = time.time() + 10*60*60 # 10 hours\n",
     "while time.time() < max_time:\n",
     "\n",
-    "    # Recommender frequently_bought_together_arn\n",
+    "    # Recommender viewed_x_also_viewed\n",
     "    version_response = personalize.describe_recommender(\n",
-    "        recommenderArn = frequently_bought_together_arn\n",
+    "        recommenderArn = viewed_x_also_viewed_arn\n",
     "    )\n",
-    "    status_frequently_bought_together = version_response[\"recommender\"][\"status\"]\n",
+    "    status_viewed_x_also_viewed = version_response[\"recommender\"][\"status\"]\n",
     "\n",
-    "    if status_frequently_bought_together == \"ACTIVE\":\n",
-    "        print(\"Build succeeded for {}\".format(frequently_bought_together_arn))\n",
+    "    if status_viewed_x_also_viewed == \"ACTIVE\":\n",
+    "        print(\"Build succeeded for {}\".format(viewed_x_also_viewed_arn))\n",
     "        \n",
-    "    elif status_frequently_bought_together == \"CREATE FAILED\":\n",
-    "        print(\"Build failed for {}\".format(frequently_bought_together_arn))\n",
+    "    elif status_viewed_x_also_viewed == \"CREATE FAILED\":\n",
+    "        print(\"Build failed for {}\".format(viewed_x_also_viewed_arn))\n",
     "        break\n",
     "\n",
-    "    if not status_frequently_bought_together == \"ACTIVE\":\n",
-    "        print(\"The recommender frequently bought together build is still in progress\")\n",
+    "    if not status_viewed_x_also_viewed == \"ACTIVE\":\n",
+    "        print('The recommender \"Customers who viewed X also viewed\" build is still in progress')\n",
     "    else:\n",
-    "        print(\"The recommender frequently bought together is ACTIVE\")\n",
+    "        print('The recommender \"Customers who viewed X also viewed\" is ACTIVE')\n",
     "\n",
-    "    # Recommender recommended_for_you_arn\n",
+    "    # Recommender recommended_for_you\n",
     "    version_response = personalize.describe_recommender(\n",
     "        recommenderArn = recommended_for_you_arn\n",
     "    )\n",
@@ -344,9 +344,9 @@
     "        break\n",
     "\n",
     "    if not status_recommended_for_you == \"ACTIVE\":\n",
-    "        print(\"The recommender recommended for you build is still in progress\")\n",
+    "        print('The recommender \"Recommended for you\" build is still in progress')\n",
     "    else:\n",
-    "        print(\"The recommender recommended for you is ACTIVE\")\n",
+    "        print('The recommender \"Recommended for you\" is ACTIVE')\n",
     "        \n",
     "    # Reranking Solution \n",
     "    version_response = personalize.describe_solution_version(\n",
@@ -366,7 +366,7 @@
     "    else:\n",
     "        print(\"The Rerank solution is ACTIVE\")\n",
     "        \n",
-    "    if status_frequently_bought_together == \"ACTIVE\" and status_recommended_for_you == 'ACTIVE' and status_rerank_solution == \"ACTIVE\":\n",
+    "    if status_viewed_x_also_viewed == \"ACTIVE\" and status_recommended_for_you == 'ACTIVE' and status_rerank_solution == \"ACTIVE\":\n",
     "        break\n",
     "\n",
     "    print()\n",
@@ -714,7 +714,7 @@
    "outputs": [],
    "source": [
     "%store recommended_for_you_arn\n",
-    "%store frequently_bought_together_arn\n",
+    "%store viewed_x_also_viewed_arn\n",
     "\n",
     "%store rerank_solution_arn\n",
     "%store rerank_solution_version_arn\n",
