--- a/notebooks/Retail/03_Inference_Layer.ipynb
+++ b/notebooks/Retail/03_Inference_Layer.ipynb
@@ -145,13 +145,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### \"Frequently Bought Together\" Recommender\n",
+    "### \"Customers who viewed X also viewed\" Recommender\n",
     "\n",
-    "\"Frequently Bought Together\" requires an item as input, and it will return items which users items that customers frequently buy together along with the item that you specified.\n",
+    "\"Customers who viewed X also viewed\" requires an item and a user as input, and it will return customers also viewed based on an item that you specify.\n",
     "\n",
-    "The cells below will handle getting recommendations from the \"Frequently Bought Together\" Recommender and rendering the results. Let's see what the recommendations are for an item.\n",
+    "The cells below will handle getting recommendations from the \"Customers who viewed X also viewed\" Recommender and rendering the results. Let's see what the recommendations are for an item.\n",
     "\n",
-    "We will be using the `recommenderArn`, the `itemId`, as well as the number or results we want, `numResults`."
+    "We will be using the `recommenderArn`, the `itemId`, the `userId`, as well as the number or results we want, `numResults`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Select a User\n",
+    "\n",
+    "We'll just pick a random user for simplicity (there are about 6,000 users with user IDs assigned in sequential order). Feel free to change the `user_id` below and execute the following cells with a different user to get a sense for how the recommendations change."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_id = 555\n",
+    "user_metadata_df[user_metadata_df['id']==user_id]"
    ]
   },
   {
@@ -172,8 +191,9 @@
     "print ('productId: ', product_id)\n",
     "\n",
     "get_recommendations_response = personalize_runtime.get_recommendations(\n",
-    "    recommenderArn = frequently_bought_together_arn,\n",
+    "    recommenderArn = viewed_x_also_viewed_arn,\n",
     "    itemId = str(product_id),\n",
+    "    userId = str(user_id),\n",
     "    numResults = 20\n",
     ")\n"
    ]
@@ -210,13 +230,14 @@
     "# Update DF rendering\n",
     "pd.set_option('display.max_rows', 30)\n",
     "\n",
-    "def get_new_recommendations_df_bought_together(recommendations_df, item_id):\n",
+    "def get_new_recommendations_df_viewed_x(recommendations_df, item_id, user_id):\n",
     "    # Get the item name\n",
     "    original_item_name = get_item_name_from_id(item_id)\n",
     "    # Get the recommendations\n",
     "    get_recommendations_response = personalize_runtime.get_recommendations(\n",
-    "        recommenderArn = frequently_bought_together_arn,\n",
+    "        recommenderArn = viewed_x_also_viewed_arn,\n",
     "        itemId = str(item_id),\n",
+    "        userId = str(user_id),\n",
     "    )\n",
     "    # Build a new dataframe of recommendations\n",
     "    item_list = get_recommendations_response['itemList']\n",
@@ -234,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's test the helper function with several different items. Let's sample some data from our dataset to test our \"Frequently Bought Together\" Recommender. Grab 5 random items from our dataframe."
+    "Now, let's test the helper function with several different items. Let's sample some data from our dataset to test our \"Customers who viewed X also viewed\" Recommender. Grab 5 random items from our dataframe."
    ]
   },
   {
@@ -250,23 +271,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "frequently_bought_together_recommendations_df = pd.DataFrame()\n",
+    "viewed_x_also_viewed_recommendations_df = pd.DataFrame()\n",
     "items = samples.id.tolist()\n",
     "\n",
     "for item in items:\n",
-    "    frequently_bought_together_recommendations_df = get_new_recommendations_df_bought_together(frequently_bought_together_recommendations_df, item)\n",
+    "    viewed_x_also_viewed_recommendations_df = get_new_recommendations_df_viewed_x(viewed_x_also_viewed_recommendations_df, item, user_id)\n",
     "\n",
-    "frequently_bought_together_recommendations_df"
+    "viewed_x_also_viewed_recommendations_df"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on the random product selected above, do the similar item recommendations from Personalize make sense? Keep in mind that the \"Frequently Bought Together\" recommendations are based on the interactions we generated as input into the solution creation process above.\n",
+    "Based on the random product selected above, do the similar item recommendations from Personalize make sense? Keep in mind that the \"Customers who viewed X also viewed\" recommendations are based on the interactions we generated as input into the solution creation process above.\n",
     "\n",
     "You may notice that some of the items look the same, hopefully not all of them do (this is more likely with a smaller # of interactions, which will be more common with a small dataset)."
    ]
@@ -280,25 +303,6 @@
     "\"Recommended for you\" supports personalization of the items for a specific user based on their past behavior and can intake real time events in order to alter recommendations for a user without retraining. \n",
     "\n",
     "With this use case, Amazon Personalize automatically filters items the user purchased based on the `userId` that you specify and \"Purchase\" events. For better performance, include \"Purchase\" events along with the required \"View\" events. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Select a User\n",
-    "\n",
-    "We'll just pick a random user for simplicity (there are about 6,000 users with user IDs assigned in sequential order). Feel free to change the `user_id` below and execute the following cells with a different user to get a sense for how the recommendations change."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "user_id = 555\n",
-    "user_metadata_df[user_metadata_df['id']==user_id]"
    ]
   },
   {
@@ -412,7 +416,7 @@
    "source": [
     "## Applying the discount context\n",
     "\n",
-    "We'll get the user recommendations when discount context is applied for comparison. This is a using the \"contextual metadata\" feature of Amazon Personalize. In this case our context is whether a dicount was applied."
+    "We'll get the user recommendations when discount context is applied for comparison. This is a using the \"contextual metadata\" feature of Amazon Personalize. In this case our context is whether a discount was applied."
    ]
   },
   {
@@ -558,7 +562,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that in this response we have a score field returned with each itemId. For all recipes except SIMS and Popularity-Count, Personalize [calculates a score](https://docs.aws.amazon.com/personalize/latest/dg/getting-real-time-recommendations.html) for each recommended item. Score values are between 0.0 and 1.0. "
+    "Notice that in this response we have a score field returned with each itemId. For all recipes except SIMS and Popularity-Count, Personalize [calculates a score](https://docs.aws.amazon.com/personalize/latest/dg/getting-real-time-recommendations.html) for each recommended item. Score values are between 0.0 and 1.0. \n",
+    "\n",
+    "Let us compare it to the original list:"
    ]
   },
   {
@@ -568,10 +574,12 @@
    "outputs": [],
    "source": [
     "df = pd.DataFrame()\n",
-    "df['Item'] = [ itm['itemId'] for itm in reranked ]\n",
-    "df['Name'] = [ get_item_name_from_id ( itm['itemId']) for itm in reranked ]\n",
-    "df['Category'] = [ get_item_category_from_id ( itm['itemId']) for itm in reranked ]\n",
-    "df['Style'] = [ get_item_style_from_id ( itm['itemId']) for itm in reranked ]\n",
+    "df['Original List'] = [ itm for itm in unranked_product_ids]\n",
+    "df['Original List Name'] = [ get_item_name_from_id ( itm) for itm in unranked_product_ids ]\n",
+    "\n",
+    "df['Reranking'] = [ itm['itemId'] for itm in reranked]\n",
+    "df['Reranking Name'] = [ get_item_name_from_id ( itm['itemId']) for itm in reranked ]\n",
+    "\n",
     "display (df)"
    ]
   },
@@ -580,88 +588,6 @@
    "metadata": {},
    "source": [
     "Are the reranked results different than the original results from the Search service? Notice that we are also given a score for each item but this time the score values are larger. This is because scores for personalized-ranking results are calculated just across the items being reranked. Experiment with a different `user_id` in the cells above to see how the item ranking changes."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Pick products for discount\n",
-    "\n",
-    "Using the featured products list we'll pick some products for discount from the featured products.\n",
-    "\n",
-    "We'll get the ranking when discount context is applied for comparison. This is a using the \"contextual metadata\" feature of Amazon Personalize.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response = personalize_runtime.get_personalized_ranking(\n",
-    "    campaignArn=rerank_campaign_arn,\n",
-    "    inputList=unranked_product_ids,\n",
-    "    userId=str(user_id),\n",
-    "    context={'DISCOUNT': 'Yes'} # Here we provide the context for the ranking\n",
-    ")\n",
-    "discount_reranked = response['personalizedRanking']\n",
-    "print('Discount context ranking:', json.dumps(discount_reranked, indent = 4))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame()\n",
-    "df['Item'] = [ itm['itemId'] for itm in discount_reranked ]\n",
-    "df['Name'] = [ get_item_name_from_id ( itm['itemId']) for itm in discount_reranked ]\n",
-    "df['Category'] = [ get_item_category_from_id ( itm['itemId']) for itm in discount_reranked ]\n",
-    "df['Style'] = [ get_item_style_from_id ( itm['itemId']) for itm in discount_reranked ]\n",
-    "display (df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "Let us compare the original list, the reranked list and the reranked list with context."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame()\n",
-    "df['Original List'] = [ itm for itm in unranked_product_ids]\n",
-    "df['Original List Name'] = [ get_item_name_from_id ( itm) for itm in unranked_product_ids ]\n",
-    "\n",
-    "df['Original Reranking'] = [ itm['itemId'] for itm in reranked]\n",
-    "df['Original Reranking Name'] = [ get_item_name_from_id ( itm['itemId']) for itm in reranked ]\n",
-    "\n",
-    "df['Discount Reranking'] = [ itm['itemId'] for itm in discount_reranked]\n",
-    "df['Discount Reranking Name'] = [ get_item_name_from_id ( itm['itemId']) for itm in discount_reranked ]\n",
-    "\n",
-    "display (df)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Has the ranking changed?"
    ]
   },
   {
@@ -865,7 +791,7 @@
     "    campaignArn=rerank_campaign_arn,\n",
     "    inputList=unranked_product_ids,\n",
     "    userId = str(user_id),\n",
-    "    filterArn = filter_arn\n",
+    "    filterArn = filter_purchase_arn\n",
     ")\n",
     "\n",
     "item_list = get_recommendations_response['personalizedRanking']\n",
@@ -1117,6 +1043,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
+    "\n",
     "current_time = datetime.now()\n",
     "print(\"Import Started on: \", current_time.strftime(\"%I:%M:%S %p\"))\n",
     "\n",
