--- a/notebooks/Retail/01_Data_Layer.ipynb
+++ b/notebooks/Retail/01_Data_Layer.ipynb
@@ -371,7 +371,7 @@
    "source": [
     "s3 = boto3.client('s3')\n",
     "account_id = boto3.client('sts').get_caller_identity().get('Account')\n",
-    "bucket_name = account_id + \"-\" + region + \"-\" + \"personalize-immersionday-retail\"\n",
+    "bucket_name = account_id + \"-\" + region + \"-\" + \"personalize-immersion-day-retail\"\n",
     "print('bucket_name:', bucket_name)\n",
     "try: \n",
     "    if region == \"us-east-1\":\n",
@@ -1101,9 +1101,9 @@
     "%store role_arn\n",
     "%store role_name\n",
     "%store region\n",
-    "%store bucket_name\n",
     "%store item_metadata_df\n",
-    "%store user_metadata_df"
+    "%store user_metadata_df\n",
+    "%store products_df"
    ]
   },
   {
