--- a/Media/01_Data.ipynb
+++ b/Media/01_Data.ipynb
@@ -189,7 +189,7 @@
    "outputs": [],
    "source": [
     "# Opening JSON file\n",
-    "f = open('../0Pretraining/Media-Pretrained/params.json')\n",
+    "f = open('./pretrain/params.json')\n",
     "parameters = json.load(f)"
    ]
   },
@@ -1084,6 +1084,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "interactions_file_path = data_dir + \"/\" + interactions_filename\n",
     "\n",
     "try:\n",
@@ -1196,6 +1200,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "#### Wait for Dataset Group to have ACTIVE Status \n",
     "\n",
     "Before we can use the Dataset Group to create more resources below, it must be active. This can take a minute or two. Execute the cell below and wait for it to show the ACTIVE status. It checks the status of the dataset group every 30 seconds, up to a maximum of 3 hours."
@@ -1225,6 +1235,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "Now that you have a dataset group, you can create a dataset for the interaction data."
    ]
   },
@@ -1946,7 +1960,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Go to the next notebook `02_Training_Layer.ipynb`](02_Training_Layer.ipynb) to continue."
+    "[Go to the next notebook `02_Training.ipynb`](02_Training.ipynb) to continue."
    ]
   }
  ],
